feat(magic): add magic api and entities
